// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/cargo/artifacts returns null if unchanged 1`] = `
[
  {
    "cmd": "cargo update --manifest-path Cargo.toml --workspace",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/cargo/artifacts returns updated Cargo.lock 1`] = `
[
  {
    "cmd": "cargo update --manifest-path Cargo.toml --workspace",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/cargo/artifacts returns updated Cargo.lock for lockfile maintenance 1`] = `
[
  {
    "cmd": "cargo update --manifest-path Cargo.toml",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/cargo/artifacts returns updated workspace Cargo.lock 1`] = `
[
  {
    "cmd": "cargo update --manifest-path crates/one/Cargo.toml --workspace",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/cargo/artifacts updates Cargo.lock based on the packageName, when given 1`] = `
[
  {
    "cmd": "cargo update --manifest-path Cargo.toml --workspace",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
